--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=ForoHub
+
+
+# Configuración de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/forohub
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+
+# Configuración JPA y Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+
+# Secreto para JWT (¡obligatorio!)
+api.security.token.secret=miClaveJWTsecreta123456789
