--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ logging.level.org.springframework.web=DEBUG
 
 # Secreto para JWT (¡obligatorio!)
 api.security.token.secret=miClaveJWTsecreta123456789
+jwt.secret=mi_clave_super_secreta_123
+jwt.expiration=3600000 
+
